# ztrix

./: .gitignore  Cargo.toml  README.md  firebase.json  package-lock.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
firebase/: .firebaserc
firebase/css/: style.css
firebase/public/: index.html
firebase/wasm/: wasm.js  wasm_bg.wasm
frontend/: Cargo.toml  component.rs  user_prefs.rs  wasm.rs
frontend/component/: about_interface.rs  board.rs  button.rs  button_binding.rs  canvas.rs  conditions.rs  config_interface.rs  edit_interface.rs  field_config.rs  game.rs  key_binding.rs  keyboard_interface.rs  piece_box.rs  play_interface.rs  queue.rs  replay_interface.rs  router.rs
frontend/controller/: action_handler.rs  input_bindings.rs
src/: board.rs  condition.rs  game.rs  kirb_generator.rs  lib.rs  main.rs  mino.rs  piece.rs  position.rs  puzzle.rs  queue.rs  randomizer.rs  replay.rs  serialize.rs  tsd_generator.rs
src/condition/: all_clear.rs  chain.rs  event.rs  spin.rs
src/game/: active_piece.rs  board.rs  game.rs  mino.rs  piece_type.rs  queue.rs  randomizer.rs
src/piece/: active_piece.rs  piece_type.rs
web/wasm/: Cargo.toml  component.rs  controller.rs  controls.rs  user_prefs.rs  wasm.rs
web/wasm/component/: about_interface.rs  binding_interface.rs  board.rs  button.rs  button_binding.rs  config_interface.rs  edit_interface.rs  game.rs  game_interface.rs  key_binding.rs  keyboard_interface.rs  piece_box.rs  play_interface.rs  queue.rs  router.rs  subcomponent.rs
web/wasm/controller/: action.rs  action_handler.rs  input_bindings.rs  input_handler.rs
(+7 files in other folders)
