[workspace]
members = [
	"frontend",
]

[package]
name = "ztrix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ztrix-test"
path = "src/main.rs"

[dependencies]
rand = {version = "0.8.5", features = ["small_rng"]}
enumset = {version = "1.0", features = ["serde"]}
