[package]
name = "wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "wasm.rs"

[dependencies]
ztrix = {path = "../../../ztrix"}
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3", "features" = [ "Window", "Document", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "CssStyleDeclaration", "console", "Location", "UrlSearchParams", "MouseEvent", "HtmlCollection"]}
yew = "0.19"
getrandom = {features = ["js"]}
enumset = "1.0"
rand = "0.8.5"