[package]
name = "wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "wasm.rs"

[dependencies]
ztrix = {path = "../../../ztrix"}
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3", "features" = [ "Window", "Document", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "CssStyleDeclaration", "console", "Location", "UrlSearchParams", "MouseEvent", "HtmlCollection"]}
yew = "0.19"
yewdux = "0.8.2"
getrandom = {version = "0.2.7", features = ["js"]}
enumset = "1.0"
enum-map = "2.4.1"
rand = {version = "0.8.5", features = ["small_rng"]}
serde = {version = "1.0.114", features = ["rc"]}
instant = {version = "0.1", features = [ "wasm-bindgen" ]}
gloo-timers = "0.2.4"